			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

08-Apr-2003
~~~~~~~~~~~
The hack we have to use to draw pinboard icons on GTK+-2.0 doesn't work
on 2.2. Show a warning instead of crashing (reported by Keith R. John Warno).

03-Apr-2003
~~~~~~~~~~~
Fix the message in install.sh, since there is no information toolbar icon
now (spotted by Albert Wagner).

29-Mar-2003 (Release 1.3.8)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

28-Mar-2003
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

27-Mar-2003
~~~~~~~~~~~
Allow dragging a file into a GtkEntry to insert the filename.
Bugfix: Selections in List View didn't work properly (reported by Stephen
	Watson).
Updated Spanish translation (Marcelo Ramos).

23-Mar-2003
~~~~~~~~~~~
Fixed use of a GTK+-2.2-only function (Geoff Youngs).
New option to set the panel size (Geoff Youngs).

21-Mar-2003
~~~~~~~~~~~
Scroll panels when the pointer is at the end, not by dragging the middle
(Geoff Youngs).
Stop the pinboard from flickering when removing icons or iconfied windows.

20-Mar-2003
~~~~~~~~~~~
Centre the image for iconified windows.
Double-buffer slightly larger areas.

18-Mar-2003
~~~~~~~~~~~
Better way to implement selections in List View (suggested by Jonathan
Blandford).
Updated Italian translation (Yuri Bongiorno).

15-Mar-2003
~~~~~~~~~~~
Bugfix: Never show the copy/move/link menu when dragging to an application.

11-Mar-2003
~~~~~~~~~~~
Bugfix: Comments about a MIME type were loaded from the first file to contain
	information about the type, not the first to contain a comment about
	the type.

09-Mar-2003
~~~~~~~~~~~
Don't mark widget documentation as translatable.
Make sure the tooltip for pinboard and panel icons is up-to-date (reported
by krjw).
Use pinboard backdrop colour for scaled and centred images (requested by
Marcelo Ramos).
Shade the backdrop style buttons when an external program is being used to
set the backdrop.
Updated Spanish translation (Marcelo Ramos).
