@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+09-Apr-2003
+~~~~~~~~~~~
+Lasso selections now work in List view.
+
 08-Apr-2003
 ~~~~~~~~~~~
 The hack we have to use to draw pinboard icons on GTK+-2.0 doesn't work
